# blackhole_js

./: .gitignore  README.md  blackhole.css  blackhole.js  index.html  pyproject.toml
src/: hud.js  interaction.js  physics.js  renderer.js  snapshot.js
tests/: physics.test.mjs
